[package]
name = "advanced-dtn-node"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A modular, secure DTN node with BLE peer discovery and bundle transfer, ready for mobile integration."
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
dtn7 = "0.12"
rsa = "0.9"
rand = "0.8"
aes-gcm = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
btleplug = "0.11.8"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tempfile = "3"

[features]
ffi = ["cbindgen", "uniffi"]
mobile = []

[build-dependencies]
cbindgen = { version = "0.26", optional = true }
uniffi = { version = "0.26", optional = true }